--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "bootstrap": "^5.3.0",
+    "bootswatch": "^5.3.3",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^19.0.2",
+    "ngx-spinner": "^19.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.1.0",
+    "xng-breadcrumb": "^13.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
